fixed contrast

--- a/bountiful/styles/small.css
+++ b/bountiful/styles/small.css
@@ -284,7 +284,7 @@ footer {
 #specialty-drink-form button[type="submit"] {
   padding: 12px 24px;
   background-color: #bd897e;
-  color: #fff;
+  color: black;
   border: none;
   border-radius: 4px;
   font-size: 16px;
